; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_link.c_test_core_link__stat_symlink_chain.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_link.c_test_core_link__stat_symlink_chain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32, i32 }

@.str = private unnamed_addr constant [18 x i8] c"stat_final_target\00", align 1
@.str.1 = private unnamed_addr constant [40 x i8] c"Final target of some symbolic links...\0A\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"stat_chain_3\00", align 1
@.str.3 = private unnamed_addr constant [13 x i8] c"stat_chain_2\00", align 1
@.str.4 = private unnamed_addr constant [13 x i8] c"stat_chain_1\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_core_link__stat_symlink_chain() #0 {
  %1 = alloca %struct.stat, align 4
  %2 = call i32 (...) @should_run()
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %6, label %4

4:                                                ; preds = %0
  %5 = call i32 (...) @clar__skip()
  br label %6

6:                                                ; preds = %4, %0
  %7 = call i32 @cl_git_rewritefile(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0))
  %8 = call i32 @do_symlink(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i32 0)
  %9 = call i32 @do_symlink(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0), i32 0)
  %10 = call i32 @do_symlink(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.4, i64 0, i64 0), i32 0)
  %11 = call i32 @p_stat(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.4, i64 0, i64 0), %struct.stat* %1)
  %12 = call i32 @cl_must_pass(i32 %11)
  %13 = getelementptr inbounds %struct.stat, %struct.stat* %1, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @S_ISREG(i32 %14)
  %16 = call i32 @cl_assert(i32 %15)
  %17 = getelementptr inbounds %struct.stat, %struct.stat* %1, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @cl_assert_equal_i(i32 39, i32 %18)
  ret void
}

declare dso_local i32 @should_run(...) #1

declare dso_local i32 @clar__skip(...) #1

declare dso_local i32 @cl_git_rewritefile(i8*, i8*) #1

declare dso_local i32 @do_symlink(i8*, i8*, i32) #1

declare dso_local i32 @cl_must_pass(i32) #1

declare dso_local i32 @p_stat(i8*, %struct.stat*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @S_ISREG(i32) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
